--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = ">=1.7.3,<1.8.0"
 pytest = "^6.2.2"
 pytest-asyncio = "^0.14.0"
 respx = "^0.16.3"
+freezegun = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
