--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.7.1"
 description = "AppDynamics connector for Opsani Servo"
 authors = ["Daniel Howell <daniel@opsani.com>"]
 license = "Apache-2.0"
+homepage = "https://github.com/opsani/servo-appdynamics"
+repository = "https://github.com/opsani/servo-appdynamics"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -11,14 +13,14 @@ servox = "^0.9.5"
 pydantic = ">=1.7.3,<1.8.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.2"
+pytest = "^6.0.1"
 pytest-asyncio = "^0.14.0"
 respx = "^0.16.3"
 freezegun = "^1.1.0"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.poetry.plugins."servo.connectors"]
 "servo-appdynamics" = "servo_appdynamics:AppdynamicsConnector"
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
