set fixed version of servox in Dockerfile
(interim update per Linear:ENG-295)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/opsani/servo-appdynamics"
 [tool.poetry.dependencies]
 python = "^3.8"
 servox = "^0.10.7"
+# note: keep servox version equal to the one in Dockerfile
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
