--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,9 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-python@v2.2.2
+    - name: Output Python version
+      id: python-version
+      run: |
+        echo "::set-output name=python-version::$(cat .python-version)"
+    - uses: actions/setup-python@v2.1.3
+      id: setup-python
       with:
-        python-version: '3.8'
+        python-version: ${{ steps.python-version.outputs.python-version }}
         architecture: x64
     - name: Install and configure Poetry
       run: |
